# advent_of_code_2025

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
src/: console.cppm  days.cppm  enum.cppm  io.cppm  parallel.cppm  parse.cppm  runner.cppm  types.cppm
src/days/: day_01.cppm  day_02.cppm  day_03.cppm  day_04.cppm  day_05.cppm  day_06.cppm  day_07.cppm  day_08.cppm  day_09.cppm  day_10.cppm  day_11.cppm  day_12.cppm  day_common.cppm
